...
    var items: [(Item, Int)]!
    var stateTax: StateTax!
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
        tableView.accessibilityIdentifier = "checkoutTableView"
    }
    
    @IBAction func backButtonTouched(_ sender: UIButton) {
        dismiss(animated: true, completion: nil)
    }    
}
...
